Fix issue of scroll not showing in dark mode

--- a/src/components/projects/projectslist.sass
+++ b/src/components/projects/projectslist.sass
@@ -6,7 +6,9 @@
   position: relative
 
 .progress-bar
+  @include applyBackgroundColors(white)
   background-color: black
+  z-index: 1
   position: sticky
   top: 0
   left: 0
