--- a/src/components/theme-toggler/themeToggle.sass
+++ b/src/components/theme-toggler/themeToggle.sass
@@ -2,7 +2,7 @@
 .theme-toggle-container
   position: fixed
   left: 100px
-  z-index: 999
+  z-index: 9
 
   .bg
     @include applyBackgroundColors($darkColor: white)
